<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background_location_list"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.etayp.weathernotifier.NotificationSettingsFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/how_frequently_should_weather_notifier_check_for_updates"
            android:textAlignment="center"
            android:textStyle="bold"
            android:theme="@android:style/Theme.Holo" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/wallet_bright_foreground_disabled_holo_light"
            android:backgroundTint="#1AFFFFFF"
            android:gravity="center"
            android:popupBackground="#06395c"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.5"
        app:srcCompat="@android:color/background_light" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:theme="@android:style/Theme.Holo">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_weight="1"
            android:text="@string/what_should_weather_notifier_keep_track_of"
            android:textAlignment="center"
            android:textStyle="bold"
            android:theme="@android:style/Theme.Holo" />

        <CheckBox
            android:id="@+id/option_rain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:checked="true"
            android:gravity="center_vertical"
            android:text="@string/option_rain"
            android:textAlignment="center"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/option_humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/option_humidity"
            android:textAlignment="center"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/option_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:checked="true"
            android:gravity="center"
            android:text="@string/option_temperature"
            android:textAlignment="center"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/option_wind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/option_wind"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>

