<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@drawable/misc_location_bubble"
    android:backgroundTint="#1AFFFFFF">

    <TextView
        android:id="@+id/update_location_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.1"
        android:text="Location"
        android:textColor="@color/colorWhite"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/feelslikeicon"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/icon_data_feelslike" />

        <ImageView
            android:id="@+id/tempratureicon"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/icon_data_temprature" />

        <ImageView
            android:id="@+id/humidityicon"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/icon_data_humidity" />

        <ImageView
            android:id="@+id/windicon"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/icon_data_wind" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <TextView
            android:id="@+id/update_apparent_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:text="@string/apparent_temprature"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/update_real_temprature_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:text="@string/real_temprature"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/update_humidity_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:text="@string/humidity"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/update_wind_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:text="@string/wind_speed"
            android:textColor="@color/colorWhite" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/update_apparent_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="left"
            android:layout_weight="1"
            android:text="number"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/update_real_temprature_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="left"
            android:layout_weight="1"
            android:text="number"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/update_humidity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="left"
            android:layout_weight="1"
            android:text="number"
            android:textColor="@color/colorWhite" />
        <TextView
            android:id="@+id/update_wind_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="left"
            android:layout_weight="1"
            android:text="number"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <ImageView
        android:id="@+id/update_weather_icon"
        android:layout_marginRight="5dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/icon_weather_clear_day" />

</LinearLayout>
